--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit ",
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "build": "npm install && npm run start"
+    "build": "CI=false npm run build"
   },
   "author": "",
   "license": "ISC",
